--- a/package.json
+++ b/package.json
@@ -22,13 +22,16 @@
     "@glif/filecoin-address": "latest",
     "@glif/filecoin-message": "^2.0.0-alpha.17",
     "@glif/filecoin-number": "latest",
-    "@glif/react-components": "^2.0.0-alpha.36",
+    "@glif/logger": "^2.0.0-alpha.16",
+    "@glif/react-components": "^2.0.0-alpha.40",
+    "multiformats": "^9.6.3",
     "next": "^12.0.7",
     "prop-types": "15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "styled-components": "5.3.3",
-    "subscriptions-transport-ws": "^0.11.0"
+    "subscriptions-transport-ws": "^0.11.0",
+    "swr": "^1.2.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.14.1",
