--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "prettier": "2.4.1",
     "react-test-renderer": "17.0.2",
     "ts-jest": "^27.0.5",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "whatwg-fetch": "^3.6.2"
   },
   "license": "(Apache-2.0 OR MIT)"
 }
