--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.7",
-    "@glif/base-css": "^0.0.1",
+    "@glif/base-css": "^0.0.5",
     "@glif/filecoin-address": "latest",
     "@glif/filecoin-message": "^2.0.0-alpha.17",
     "@glif/filecoin-number": "latest",
     "@glif/logger": "^2.0.0-alpha.16",
-    "@glif/react-components": "^2.0.0-alpha.44",
+    "@glif/react-components": "^2.0.0-alpha.45",
     "multiformats": "^9.6.3",
     "next": "^12.0.7",
     "prop-types": "15.7.2",
@@ -56,7 +56,8 @@
     "prettier": "2.4.1",
     "react-test-renderer": "17.0.2",
     "ts-jest": "^27.0.5",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "whatwg-fetch": "^3.6.2"
   },
   "license": "(Apache-2.0 OR MIT)"
 }
