--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "explorer",
-  "version": "0.0.0-1",
+  "version": "0.0.0-calibration.0",
   "engines": {
     "node": ">=12.0.0"
   },
