--- a/.github/workflows/mainnet.yml
+++ b/.github/workflows/mainnet.yml
@@ -1,4 +1,4 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
+# This workflow will run a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
 name: deploy - mainnet
@@ -60,7 +60,7 @@ jobs:
         run: npm run export
         env:
           LOTUS_NODE_JSONRPC: 'https://mainnet.glif.host'
-          GRAPH_API_URL: 'graph.glif.host/query'
+          GRAPH_API_URL: 'https://graph.glif.link/'
           COIN_TYPE: 'f'
           HOME_URL: 'https://calibration.glif.link'
           BLOG_URL: 'https://blog.glif.io'
