--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "explorer",
-  "version": "0.0.11-calibration.1",
+  "version": "0.0.11",
   "engines": {
     "node": ">=12.0.0"
   },
