--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "explorer",
   "version": "0.0.12",
   "engines": {
-    "node": ">=12.0.0"
+    "node": ">=16.0.0"
   },
   "scripts": {
     "dev": "next -p 3003",
@@ -20,43 +20,41 @@
     "publish:mainnet": "wrangler publish --env mainnet"
   },
   "dependencies": {
-    "@apollo/client": "^3.5.7",
+    "@apollo/client": "^3.6.8",
     "@glif/base-css": "^0.0.25",
-    "@glif/filecoin-address": "latest",
-    "@glif/filecoin-message": "^2.0.0-alpha.17",
-    "@glif/filecoin-number": "latest",
-    "@glif/logger": "^2.0.0-alpha.16",
-    "@glif/react-components": "^2.0.0-alpha.111",
-    "multiformats": "^9.6.3",
-    "next": "^12.1.0",
+    "@glif/filecoin-address": "^2.0.0-beta.16",
+    "@glif/filecoin-message": "^2.0.0-beta.16",
+    "@glif/filecoin-number": "^2.0.0-beta.16",
+    "@glif/logger": "^2.0.0-beta.7",
+    "@glif/react-components": "^2.0.0-alpha.119",
+    "next": "^12.1.6",
     "prop-types": "15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "styled-components": "5.3.3",
-    "subscriptions-transport-ws": "^0.11.0",
     "swr": "^1.3.0"
   },
   "devDependencies": {
-    "@cloudflare/wrangler": "^1.19.8",
     "@glif/deployment-cli": "^2.0.0-beta.2",
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "12.1.2",
-    "@testing-library/react-hooks": "7.0.2",
-    "@types/jest": "^27.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.11.0",
-    "@typescript-eslint/parser": "^5.10.2",
-    "babel-jest": "^27.1.1",
-    "babel-plugin-styled-components": "2.0.2",
-    "eslint": "^7.32.0",
-    "eslint-config-next": "12.1.0",
+    "@testing-library/react-hooks": "8.0.1",
+    "@types/jest": "^28.1.1",
+    "@types/react": "^17.0.45",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
+    "babel-jest": "^28.1.1",
+    "babel-plugin-styled-components": "2.0.7",
+    "eslint": "^8.18.0",
+    "eslint-config-next": "12.1.6",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-prettier": "4.0.0",
-    "jest": "^27.1.1",
-    "jest-styled-components": "7.0.5",
-    "prettier": "2.6.2",
-    "react-test-renderer": "17.0.2",
-    "ts-jest": "^27.0.5",
-    "typescript": "^4.4.3",
+    "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
+    "jest-styled-components": "7.0.8",
+    "prettier": "2.7.1",
+    "ts-jest": "^28.0.5",
+    "typescript": "^4.7.3",
     "whatwg-fetch": "^3.6.2"
   },
   "license": "(Apache-2.0 OR MIT)"
