--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "styled-components": "5.3.5",
+    "subscriptions-transport-ws": "^0.11.0",
     "swr": "^1.3.0"
   },
   "devDependencies": {
