fix calibration node

--- a/.github/workflows/calibration.yml
+++ b/.github/workflows/calibration.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Build
         run: npm run export
         env:
-          LOTUS_NODE_JSONRPC: 'https://calibration.node.glif.io'
+          LOTUS_NODE_JSONRPC: 'https://api.calibration.node.glif.io'
           GRAPH_API_URL: 'graph-calibration.glif.link/query'
           COIN_TYPE: 't'
           HOME_URL: 'https://apps-calibration.glif.link'
