--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "explorer",
-  "version": "0.0.20-calibration.1",
+  "version": "0.0.20",
   "engines": {
     "node": ">=16.0.0"
   },
