--- a/package.json
+++ b/package.json
@@ -28,31 +28,31 @@
     "@glif/logger": "^2.0.0-beta.7",
     "@glif/react-components": "^2.0.0-alpha.142",
     "next": "^12.1.6",
-    "prop-types": "15.8.1",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "styled-components": "5.3.5",
+    "styled-components": "^5.3.5",
     "swr": "^1.3.0"
   },
   "devDependencies": {
     "@glif/deployment-cli": "^2.0.0-beta.2",
-    "@testing-library/jest-dom": "5.16.4",
-    "@testing-library/react": "12.1.5",
-    "@testing-library/react-hooks": "8.0.1",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^12.1.5",
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/jest": "^28.1.1",
     "@types/react": "^17.0.45",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
     "babel-jest": "^28.1.1",
-    "babel-plugin-styled-components": "2.0.7",
+    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "^8.18.0",
-    "eslint-config-next": "12.2.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-prettier": "4.0.0",
+    "eslint-config-next": "^12.2.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "jest": "^28.1.2",
     "jest-environment-jsdom": "^28.1.1",
-    "jest-styled-components": "7.0.8",
-    "prettier": "2.7.1",
+    "jest-styled-components": "^7.0.8",
+    "prettier": "^2.7.1",
     "ts-jest": "^28.0.5",
     "typescript": "^4.7.3",
     "whatwg-fetch": "^3.6.2"
