--- a/.github/workflows/mainnet.yml
+++ b/.github/workflows/mainnet.yml
@@ -62,12 +62,12 @@ jobs:
           LOTUS_NODE_JSONRPC: 'https://mainnet.glif.host/'
           GRAPH_API_URL: 'graph.glif.link/query'
           COIN_TYPE: 'f'
-          HOME_URL: 'https://calibration.glif.link'
+          HOME_URL: 'https://apps.glif.io'
           BLOG_URL: 'https://blog.glif.io'
-          WALLET_URL: 'https://wallet.glif.link'
-          SAFE_URL: 'https://safe.glif.link'
-          EXPLORER_URL: 'https://explorer.glif.link'
-          VERIFIER_URL: 'https://verify.glif.link'
+          WALLET_URL: 'https://wallet.glif.io'
+          SAFE_URL: 'https://safe.glif.io'
+          EXPLORER_URL: 'https://explorer.glif.io'
+          VERIFIER_URL: 'https://verify.glif.io'
           SENTRY_DSN: 'https://d5cec97f452d46f2abd04dffaf425f25@o1126745.ingest.sentry.io/6187874'
           SENTRY_ENV: 'mainnet'
 
