--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "@glif/filecoin-number": "^2.0.5",
     "@glif/logger": "^2.0.1",
     "@glif/react-components": "^2.0.1",
+    "ethers": "^5.7.2",
     "next": "^12.2.3",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "styled-components": "^5.3.5",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "wagmi": "^0.7.5"
   },
   "devDependencies": {
     "@glif/deployment-cli": "^2.0.1",
