--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
   "dependencies": {
     "@apollo/client": "^3.6.9",
     "@glif/base-css": "^0.0.33",
-    "@glif/filecoin-actor-utils": "^2.0.26",
-    "@glif/filecoin-address": "^2.0.18",
-    "@glif/filecoin-message": "^2.0.18",
+    "@glif/filecoin-actor-utils": "^2.0.29",
+    "@glif/filecoin-address": "^2.0.20",
+    "@glif/filecoin-message": "^2.0.27",
     "@glif/filecoin-number": "^2.0.5",
     "@glif/logger": "^2.0.1",
-    "@glif/react-components": "^2.1.6-2",
+    "@glif/react-components": "^2.1.6",
     "ethers": "^5.7.2",
     "next": "^12.2.3",
     "prop-types": "^15.8.1",
